0.29 2019-??-??
-optimization: uri() now sets default scheme to "file" in XS
-docs updated to clarify the unclear

0.28 2018-05-30
-bugfix: segfault when c function uri_decode called with len=0 and an input
 string with length > 0

0.27 2018-05-26
-declare POD encoding

0.26 2018-05-25
-switch from Dist::Zilla and Inline::C to vanilla XS and ExtUtils::MakeMaker to
 simplify building binary distributions
-support for interpreter threads
-remove separate URI::Fast::IRI module as Dist::Zilla's POD generator is no
 longer used

0.25 (failed)
-failed due to version conflict in URI::Fast::IRI, which has no version

0.24 2018-05-23
-bugfix: move URI::Fast::IRI to its own file to unconfuse Dist::Zilla when generating docs

0.23 2018-04-26
-support for IRIs via new constructor, iri()
-documented uri_split()

0.22 2018-03-27
-bugfix: add 'name' and 'version' parameters to `use Inline` statment and call
 to `Inline->init` to avoid runtime lookup errors

0.21 2018-03-27
-compromise: attempt to decode utf8 from percent-encoded sequences, but
 fail gracefully

0.20 2018-03-27
-don't croak on invalid utf8; uri may include arbitrary encoded bytes

0.19 2018-03-27
-added minimal validation of decoded utf8 (croaks on invalid sequences)

0.18 2018-03-21
-support for tied scalar inputs in XS code

0.17 2018-03-19
-bugfix: in which sysread gives up and puts the code in __DATA__ after all

0.16 2018-03-19
-bugfix: mixed separators in generated source file path on some mswin32 systems

0.15 2018-03-16
-bugfix: split_path generates incorrect segments on //paths

0.14 2018-03-16
-bugfix: dynamically find path to uri_fast.c
-bugfix: move uri_fast.c out of lib root

0.13 2018-03-16
-support for specifying delimiter when modifying query parameters
-bugfix: inlined function visibility lost in generated xs scope

0.12 2018-03-14
-bugfix: fix compiler error on MSWin32 (thanks appveyor!)

0.11 2018-03-13
-bugfix: length was being ignored in uri_scan_auth

0.10 2018-03-13
-exposed clear_* methods