@@ -135,8 +135,8 @@ parameter to C<undef> deletes the parameter from the URI.
   $uri->param('fnord', 'slack');
 
   my $value_scalar    = $uri->param('fnord'); # fnord appears once
-  my $value_array_ref = $uri->param('foo');   # foo appears twice
-  my @value_list      = $uri->param('foo');   # list context always yields a list
+  my @value_list      = $uri->param('foo');   # foo appears twice
+  my $value_scalar    = $uri->param('foo');   # croaks; expected single value but foo has multiple
 
   # Delete 'foo'
   $uri->param('foo', undef);
