@@ -1,6 +1,8 @@
 0.29 2019-??-??
 -optimization: uri() now sets default scheme to "file" in XS
 -docs updated to clarify the unclear
+-incompatible change: param() croaks when called in scalar context but
+ encounters multiple parameter values
 
 0.28 2018-05-30
 -bugfix: segfault when c function uri_decode called with len=0 and an input
